Change font size for graphs

--- a/latex_util.ipynb
+++ b/latex_util.ipynb
@@ -23,21 +23,23 @@
    "outputs": [],
    "source": [
     "\n",
-    "def make_latex_score(mean, rmse):\n",
+    "def make_latex_score(mean, rmse, has_alert=False):\n",
     "    rmse = \"{:.3f}\".format(rmse)\n",
     "    mean = \"{:.3f}\".format(mean)\n",
+    "    if has_alert:\n",
+    "        return \"\\\\underset{\" + \"\\\\alert{(\" + f\"{rmse}\" + \")}}\" + \"{\" + mean + \"}\"\n",
     "    return \"\\\\underset{\" + f\"({rmse})\" + \"}\" + \"{\" + mean + \"}\"\n",
     "\n",
-    "def get_latex_row_part(summary_row):\n",
+    "def get_latex_row_part(summary_row, has_alert=False):\n",
     "    mean_cols = [\"mean_estimates_1\", \"mean_estimates_2\", \"mean_estimates_3\"]\n",
     "    rmse_cols = [\"rmse_1\", \"rmse_2\", \"rmse_3\"]\n",
     "    return \" & \".join([\n",
-    "        make_latex_score(summary_row[mean_col], summary_row[rmse_col]) \n",
+    "        make_latex_score(summary_row[mean_col], summary_row[rmse_col], has_alert) \n",
     "        for mean_col, rmse_col in zip(mean_cols, rmse_cols)\n",
     "    ])\n",
     "        \n",
-    "def get_latex_rows(summary_df, label):\n",
-    "    row_parts = summary_df.apply(get_latex_row_part, axis=1).tolist()\n",
+    "def get_latex_rows(summary_df, label, has_alert=False):\n",
+    "    row_parts = summary_df.apply(lambda row: get_latex_row_part(row, has_alert), axis=1).tolist()\n",
     "    first_cols = row_parts[0::3]\n",
     "    second_cols = row_parts[1::3]\n",
     "    third_cols = row_parts[2::3]\n",
@@ -46,23 +48,26 @@
     "        for first, second, third in zip(first_cols, second_cols, third_cols)\n",
     "    ]\n",
     "\n",
-    "def print_latex_rows(summary_df, label):\n",
-    "    for row in get_latex_rows(summary_df, label):\n",
+    "def print_latex_rows(summary_df, label, has_alert=False):\n",
+    "    for row in get_latex_rows(summary_df, label, has_alert):\n",
     "        print(row)\n",
+    "    print()\n",
     "\n",
-    "def print_latex_rows_for_all_lengths(summary_df, label):\n",
+    "def print_latex_rows_for_all_lengths(summary_df, label, has_alert=False):\n",
     "    for length, simulation in summary_df.groupby(\"length\"):\n",
     "        print(f\"T = {length}\")\n",
     "        print_latex_rows(\n",
     "            simulation.sort_values(by=\"true_params_3\",  ascending=False).iloc[[0, 1, 3, 2, 4, 5, 6, 7, 8], :],\n",
-    "            label\n",
+    "            label,\n",
+    "            has_alert\n",
     "        )\n",
-    "        print()"
+    "        print()\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -108,13 +113,77 @@
      "text": [
       "\\theta_{unbounded} & \\underset{(0.467)}{-0.967} & \\underset{(0.056)}{0.882} & \\underset{(0.163)}{0.693} & \\underset{(0.355)}{-0.538} & \\underset{(0.043)}{0.934} & \\underset{(0.130)}{0.503} & \\underset{(0.351)}{-0.293} & \\underset{(0.044)}{0.964} & \\underset{(0.104)}{0.332} \\\\\n",
       "\\theta_{unbounded} & \\underset{(1.428)}{-1.214} & \\underset{(0.192)}{0.836} & \\underset{(0.249)}{0.427} & \\underset{(1.354)}{-0.792} & \\underset{(0.182)}{0.893} & \\underset{(0.221)}{0.325} & \\underset{(1.343)}{-0.552} & \\underset{(0.181)}{0.925} & \\underset{(0.204)}{0.232} \\\\\n",
-      "\\theta_{unbounded} & \\underset{(5.474)}{-4.684} & \\underset{(0.776)}{0.336} & \\underset{(0.360)}{0.304} & \\underset{(5.419)}{-4.202} & \\underset{(0.770)}{0.404} & \\underset{(0.363)}{0.283} & \\underset{(5.521)}{-4.041} & \\underset{(0.786)}{0.426} & \\underset{(0.370)}{0.264} \\\\\n"
+      "\\theta_{unbounded} & \\underset{(5.474)}{-4.684} & \\underset{(0.776)}{0.336} & \\underset{(0.360)}{0.304} & \\underset{(5.419)}{-4.202} & \\underset{(0.770)}{0.404} & \\underset{(0.363)}{0.283} & \\underset{(5.521)}{-4.041} & \\underset{(0.786)}{0.426} & \\underset{(0.370)}{0.264} \\\\\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "unbounded = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/unbounded_gs/unbounded.csv\")\n",
     "print_latex_rows(unbounded, \"\\\\theta_{unbounded}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\theta_{bounded} & \\underset{(0.404)}{-0.950} & \\underset{(0.049)}{0.884} & \\underset{(0.154)}{0.689} & \\underset{(0.326)}{-0.533} & \\underset{(0.039)}{0.935} & \\underset{(0.126)}{0.502} & \\underset{(0.262)}{-0.283} & \\underset{(0.032)}{0.965} & \\underset{(0.095)}{0.330} \\\\\n",
+      "\\theta_{bounded} & \\underset{(0.547)}{-0.936} & \\underset{(0.073)}{0.873} & \\underset{(0.164)}{0.389} & \\underset{(0.496)}{-0.587} & \\underset{(0.067)}{0.920} & \\underset{(0.146)}{0.300} & \\underset{(0.479)}{-0.372} & \\underset{(0.064)}{0.950} & \\underset{(0.127)}{0.212} \\\\\n",
+      "\\theta_{bounded} & \\underset{(0.716)}{-1.166} & \\underset{(0.101)}{0.835} & \\underset{(0.161)}{0.160} & \\underset{(0.899)}{-1.021} & \\underset{(0.127)}{0.856} & \\underset{(0.165)}{0.154} & \\underset{(1.001)}{-0.907} & \\underset{(0.141)}{0.872} & \\underset{(0.168)}{0.140} \\\\\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bounded = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/bouned_gs/bounded.csv\")\n",
+    "print_latex_rows(bounded, \"\\\\theta_{bounded}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.404)}{-0.950} & \\underset{(0.049)}{0.884} & \\underset{(0.154)}{0.689} & \\underset{(0.326)}{-0.533} & \\underset{(0.039)}{0.935} & \\underset{(0.126)}{0.502} & \\underset{(0.262)}{-0.283} & \\underset{(0.032)}{0.965} & \\underset{(0.095)}{0.330} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.547)}{-0.936} & \\underset{(0.073)}{0.873} & \\underset{(0.164)}{0.389} & \\underset{(0.496)}{-0.587} & \\underset{(0.067)}{0.920} & \\underset{(0.146)}{0.300} & \\underset{(0.479)}{-0.372} & \\underset{(0.064)}{0.950} & \\underset{(0.127)}{0.212} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.716)}{-1.166} & \\underset{(0.101)}{0.835} & \\underset{(0.161)}{0.160} & \\underset{(0.899)}{-1.021} & \\underset{(0.127)}{0.856} & \\underset{(0.165)}{0.154} & \\underset{(1.001)}{-0.907} & \\underset{(0.141)}{0.872} & \\underset{(0.168)}{0.140} \\\\\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bounded = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/bouned_gs/bounded.csv\")\n",
+    "print_latex_rows(bounded, r\"\\hat{\\theta}_{\\text{QML}}\", has_alert=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\hat{\\theta}_{\\text{J}} & \\underset{(0.480)}{-0.990} & \\underset{(0.060)}{0.880} & \\underset{(0.160)}{0.700} & \\underset{(0.320)}{-0.550} & \\underset{(0.040)}{0.930} & \\underset{(0.120)}{0.510} & \\underset{(0.090)}{-0.110} & \\underset{(0.010)}{0.990} & \\underset{(0.070)}{0.330} \\\\\n",
+      "\\hat{\\theta}_{\\text{J}} & \\underset{(1.600)}{-1.400} & \\underset{(0.220)}{0.810} & \\underset{(0.270)}{0.450} & \\underset{(1.700)}{-1.000} & \\underset{(0.230)}{0.860} & \\underset{(0.250)}{0.350} & \\underset{(0.540)}{-0.200} & \\underset{(0.080)}{0.970} & \\underset{(0.150)}{0.220} \\\\\n",
+      "\\hat{\\theta}_{\\text{J}} & \\underset{(5.600)}{-5.500} & \\underset{(0.790)}{0.230} & \\underset{(0.390)}{0.330} & \\underset{(6.000)}{-5.500} & \\underset{(0.850)}{0.220} & \\underset{(0.410)}{0.310} & \\underset{(4.600)}{-3.500} & \\underset{(0.670)}{0.490} & \\underset{(0.460)}{0.350} \\\\\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "reference = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/reference_results.csv\", header=None)\n",
+    "print_latex_rows(convert_reference_to_summary_format(reference), r\"\\hat{\\theta}_{\\text{J}}\", has_alert=False)"
    ]
   },
   {
@@ -126,20 +195,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\theta_{bounded} & \\underset{(0.404)}{-0.950} & \\underset{(0.049)}{0.884} & \\underset{(0.154)}{0.689} & \\underset{(0.326)}{-0.533} & \\underset{(0.039)}{0.935} & \\underset{(0.126)}{0.502} & \\underset{(0.262)}{-0.283} & \\underset{(0.032)}{0.965} & \\underset{(0.095)}{0.330} \\\\\n",
-      "\\theta_{bounded} & \\underset{(0.547)}{-0.936} & \\underset{(0.073)}{0.873} & \\underset{(0.164)}{0.389} & \\underset{(0.496)}{-0.587} & \\underset{(0.067)}{0.920} & \\underset{(0.146)}{0.300} & \\underset{(0.479)}{-0.372} & \\underset{(0.064)}{0.950} & \\underset{(0.127)}{0.212} \\\\\n",
-      "\\theta_{bounded} & \\underset{(0.716)}{-1.166} & \\underset{(0.101)}{0.835} & \\underset{(0.161)}{0.160} & \\underset{(0.899)}{-1.021} & \\underset{(0.127)}{0.856} & \\underset{(0.165)}{0.154} & \\underset{(1.001)}{-0.907} & \\underset{(0.141)}{0.872} & \\underset{(0.168)}{0.140} \\\\\n"
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{\\alert{(0.404)}}{-0.950} & \\underset{\\alert{(0.049)}}{0.884} & \\underset{\\alert{(0.154)}}{0.689} & \\underset{\\alert{(0.326)}}{-0.533} & \\underset{\\alert{(0.039)}}{0.935} & \\underset{\\alert{(0.126)}}{0.502} & \\underset{\\alert{(0.262)}}{-0.283} & \\underset{\\alert{(0.032)}}{0.965} & \\underset{\\alert{(0.095)}}{0.330} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{\\alert{(0.547)}}{-0.936} & \\underset{\\alert{(0.073)}}{0.873} & \\underset{\\alert{(0.164)}}{0.389} & \\underset{\\alert{(0.496)}}{-0.587} & \\underset{\\alert{(0.067)}}{0.920} & \\underset{\\alert{(0.146)}}{0.300} & \\underset{\\alert{(0.479)}}{-0.372} & \\underset{\\alert{(0.064)}}{0.950} & \\underset{\\alert{(0.127)}}{0.212} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{\\alert{(0.716)}}{-1.166} & \\underset{\\alert{(0.101)}}{0.835} & \\underset{\\alert{(0.161)}}{0.160} & \\underset{\\alert{(0.899)}}{-1.021} & \\underset{\\alert{(0.127)}}{0.856} & \\underset{\\alert{(0.165)}}{0.154} & \\underset{\\alert{(1.001)}}{-0.907} & \\underset{\\alert{(0.141)}}{0.872} & \\underset{\\alert{(0.168)}}{0.140} \\\\\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "bounded = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/bouned_gs/bounded.csv\")\n",
-    "print_latex_rows(bounded, \"\\\\theta_{bounded}\")"
+    "print_latex_rows(bounded, r\"\\hat{\\theta}_{\\text{QML}}\", has_alert=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\hat{\\theta}_{\\text{J}} & \\underset{\\alert{(0.480)}}{-0.990} & \\underset{\\alert{(0.060)}}{0.880} & \\underset{\\alert{(0.160)}}{0.700} & \\underset{\\alert{(0.320)}}{-0.550} & \\underset{\\alert{(0.040)}}{0.930} & \\underset{\\alert{(0.120)}}{0.510} & \\underset{\\alert{(0.090)}}{-0.110} & \\underset{\\alert{(0.010)}}{0.990} & \\underset{\\alert{(0.070)}}{0.330} \\\\\n",
+      "\\hat{\\theta}_{\\text{J}} & \\underset{\\alert{(1.600)}}{-1.400} & \\underset{\\alert{(0.220)}}{0.810} & \\underset{\\alert{(0.270)}}{0.450} & \\underset{\\alert{(1.700)}}{-1.000} & \\underset{\\alert{(0.230)}}{0.860} & \\underset{\\alert{(0.250)}}{0.350} & \\underset{\\alert{(0.540)}}{-0.200} & \\underset{\\alert{(0.080)}}{0.970} & \\underset{\\alert{(0.150)}}{0.220} \\\\\n",
+      "\\hat{\\theta}_{\\text{J}} & \\underset{\\alert{(5.600)}}{-5.500} & \\underset{\\alert{(0.790)}}{0.230} & \\underset{\\alert{(0.390)}}{0.330} & \\underset{\\alert{(6.000)}}{-5.500} & \\underset{\\alert{(0.850)}}{0.220} & \\underset{\\alert{(0.410)}}{0.310} & \\underset{\\alert{(4.600)}}{-3.500} & \\underset{\\alert{(0.670)}}{0.490} & \\underset{\\alert{(0.460)}}{0.350} \\\\\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "reference = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/reference_results.csv\", header=None)\n",
+    "print_latex_rows(convert_reference_to_summary_format(reference), r\"\\hat{\\theta}_{\\text{J}}\", has_alert=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
